# DP-CS-Mock-Communication

./: .gitignore  CMakeLists.txt  README.md  fixed-point.h  server  tcp_server.cpp
1value_neural_net/: .~lock.W1.csv#  CMakeLists.txt  X.csv  weights_provider.cpp
dot_product_dp/: CMakeLists.txt  dp  dp.cpp  input_dp1.txt
mat_const_operations_dp/: CMakeLists.txt  dp.cpp  input_dp_mat.txt
mat_mul_dp/: CMakeLists.txt  dp  input_dp0.txt  input_dp1.txt  mat_mul_dp
mult_dp/: CMakeLists.txt  dp  dp.cpp
neural_net_dp/: B1.csv  B2.csv  B3.csv  CMakeLists.txt  W2.csv  W3.csv  X.csv  image_provider.cpp  input_dp0.txt  weights_provider.cpp
trial_server/: CMakeLists.txt  trial_server  trial_server.cpp
